# data-quality-assistant

./: .gitignore  client_proposal.txt  demo_streamlit_app.py  pyproject.toml
data/: data.xlsx
notebooks/: data_quality_assistant.ipynb
src/data_quality_assistant/: assistant.py
src/data_quality_assistant/llm/: nodes.py  prompts.py  workflow.py
src/data_quality_assistant/models/: llm_response.py  state.py
